--- a/concepts/src/App.css
+++ b/concepts/src/App.css
@@ -17,7 +17,9 @@
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
-
+ul {
+  list-style: none;
+}
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
